--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,29 @@
 .App {
+  color: #3d84b8;
   font-family: sans-serif;
   text-align: center;
+  padding: 1rem;
+  border: none;
+  border-radius: 1rem;
+  background-image: linear-gradient(#141e61, #eeeeee);
 }
+
+h1 {
+  color: white;
+}
+h2 {
+  color: #0f044c;
+}
+
 input {
   padding: 1rem;
   width: 80%;
+  box-shadow: 0.5rem;
+  border: none;
+  border-radius: 1rem;
+  outline: none;
+}
+span {
+  cursor: pointer;
+  font-size: 1.5rem;
 }
